 - #5992, Optimize GiST index for repeated edge subdivision in topology (Darafei Praliaskouski)
 - #5702, Allow the compiler to detect the parallelism -flto=auto (Darafei Praliaskouski)
 - #4798, ST_AsGeoJSON warns about duplicate property keys (Darafei Praliaskouski)
 - #5950, Document POSTGIS_REGRESS_DB_OWNER for sandboxed regression roles (Darafei Praliaskouski)

* Bug Fixes *

 - #5959, Prevent histogram target overflow when analysing massive tables (Darafei Praliaskouski)
 - #4828, geometry_columns handles NOT VALID SRID checks without errors (Darafei Praliaskouski)
 - #5645, Docs: keep code operators ("=>") intact in translated manuals
          by enforcing verbatim CSS (Darafei Praliaskouski)

PostGIS 3.6.0
2025/09/01

This version requires PostgreSQL 12-18beta3, GEOS 3.8 or higher, and Proj 6.1+.
To take advantage of all features, GEOS 3.14+ is needed.
To take advantage of all SFCGAL features, SFCGAL 2.2+ is needed.

Many thanks to our translation teams, in particular:

Teramoto Ikuhiro (Japanese Team)
Daniel Nylander (Swedish Team)
Dapeng Wang, Zuo Chenwei from HighGo (Chinese Team)
Denys Kovshun (Ukrainian Team)

* Breaking Changes *

  - #5799, make ST_TileEnvelope clips envelopes to tile plane extent (Paul Ramsey)
  - #5829, remove constraint checking from geometry_columns view (Paul Ramsey)
  - #3373, GT-255, [topology] Support for upgrading domains (Ayo Adesugba, U.S. Census Bureau)
  - GT-252, ST_NumGeometries/ST_GeometryN treat TIN and PolyhedralSurface as unitary geometries,
    use ST_NumPatches/ST_PatchN for patch access (Loïc Bartoletti)
  - #3110, GT-242 [topology] Support for bigint (Ayo Adesugba, U.S. Census Bureau)
  - #5359, #5897, GT-260 [tiger_geocoder] Use @extschema:extension@ for PG >= 16
    to schema qualify dependent extensions, switch to use typmod for tiger tables
    (Regina Obe)

* Deprecated / Removed signatures *

 - #3110, GT-242, [topology] numerous topology functions that accepted integer